kubernetes/apps/vaultwarden/ingress.yaml
---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  namespace: vaultwarden
  name: vaultwarden-ingress
spec:
  entryPoints:
    - web
    - websecure
  routes:
    - kind: Rule
      match: Host(`vault.kalexlab.xyz`)
      services:
        - name: vaultwarden
          port: 8080
  tls:
    secretName: vaultwarden-ingress-certificate-secret
